--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://beastboylk2002:test123@cluster0.6e718.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://salliladimuthu2002:salila2002@cluster0.5rngs.mongodb.net/?retryWrites=true&w=majority
 PORT=4000
+
